--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing Article</h1>
 
-<%= render 'form', article: @article %>
+<div id="editable-content">
+  <editor>
+    <%== @article.draft %>
+  </editor>
+</div>
 
-<%= link_to 'Show', @article %> |
-<%= link_to 'Back', articles_path %>
