--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,3 +1,7 @@
+<% content_for :header_bottom do %>
+  <%= javascript_pack_tag 'editable' %>
+  <%= stylesheet_pack_tag 'editable' %>
+<% end %>
 
 <div id="editable-content">
   <editor>
